[metadata]
name = thumbor_dash
version = 0.0.2
author = mayoreee
description = A thumbor extension for DASH
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mayoreee/thumbor_dash
project_urls =
    Bug Tracker = https://github.com/mayoreee/thumbor_dash/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
package_dir =
    = thumbor_dash
packages = find:
python_requires = >=3.9
install_requires =
        thumbor >= "7.0.0"
[options.packages.find]
where = thumbor_dash