[metadata]
name = thumbor_dash
version = 0.0.3
author = mayoreee
description = A thumbor server extension for DASH
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mayoreee/thumbor_dash
project_urls =
    Source Code = https://github.com/mayoreee/thumbor_dash
    Bug Tracker = https://github.com/mayoreee/thumbor_dash/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
        thumbor >= "7.0.0"
        dapiclient >= "0.0.1"
        grpcio >= "1.38.1"

packages = find_namespace:
[options.packages.find]
exclude = 
        tests*

[options.entry_points]
console_scripts =
        thumbor_dash = thumbor_dash.server:main
        thumbor_dash-url = thumbor_dash.url_composer:main
        
